Add favicon to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<link rel="icon" href="https://art.pixilart.com/sr5zb064aa36ecaws3.png" type="image/x-icon"/>
 		<title>Dr Frost Maths</title>
 	</head>
 	
@@ -32,4 +33,5 @@
 		<iframe style="max-width:100%" src="https://www.drfrost.org" width="1750" height="900" frameborder="0" allowfullscreen></iframe>
 		<iframe style="max-width:100%" src="https://www.kodub.com/apps/polytrack" width="1750" height="700" frameborder="0" allowfullscreen></iframe>
 	</body>
+
 </html>
