--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         document.getElementById('unlockScrollBtn').addEventListener('click', enableScroll);
     </script>
 		<iframe style="max-width:100%" src="https://www.drfrost.org" width="1750" height="900" frameborder="0" allowfullscreen></iframe>
-		<iframe style="max-width:100%" src="https://www.kodub.com/apps/polytrack" width="1750" height="700" frameborder="0" allowfullscreen></iframe>
+		<iframe style="max-width:100%" src="https://www.polytrack.gg" width="1750" height="700" frameborder="0" allowfullscreen></iframe>
 	</body>
 
 </html>
+
